胡淼：移除common-ui/common-lib，更改为cloud-ui/cloud-lib

--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "axios": "~0.21.0",
-    "common-lib": "^2.0.1",
-    "common-ui": "^1.0.0",
+    "cloud-lib": "^2.0.0",
+    "cloud-ui": "^1.0.0",
     "core-js": "^3.8.3",
-    "element-ui": "^2.15.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
