--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 #registry=http://nexus.alphacloudnative.huaxiacloud.com/repository/npm-group/
 #registry=http://119.3.249.210:8081/repository/npm-group/
 #_auth=aHVtaWFvOmh1bWlhbzEyMyE=
-registry=registry=https://nexus.cloud.huaxiacloud.com/repository/chinasoft-npm-group/
+registry=http://nexus.cloud.huaxiacloud.com/repository/chinasoft-npm-group/
 _auth=YW1wLWRldjo3XUJiWzlBeXYt
